@startuml
title SMS - Class Diagram (RBAC 3 Roles)

skinparam classAttributeIconSize 0
hide circle

enum VaiTro {
  ADMIN
  SINH_VIEN
  GIANG_VIEN
}

enum TrangThaiTaiKhoan {
  ACTIVE
  INACTIVE
  LOCKED
}

enum TrangThaiSinhVien {
  ACTIVE
  INACTIVE
  SOFT_DELETED
}

enum TrangThaiLopHP {
  OPEN
  CLOSED
}

enum TrangThaiDangKy {
  DANG_HOC
  HOAN_THANH
  HUY
}

enum TrangThaiDiemDanh {
  PRESENT
  ABSENT
  LATE
  EXCUSED
}

class User {
  +id: int
  +username: string
  +passwordHash: string
}

class UserProfile {
  +id: int
  +role: VaiTro
  +status: TrangThaiTaiKhoan
}

class Student {
  +id: int
  +maSv: string
  +hoTen: string
  +ngaySinh: date
  +email: string
  +khoa: string
  +nganh: string
  +lop: string
  +khoaHoc: string
  +trangThai: TrangThaiSinhVien
}

class Course {
  +id: int
  +maHp: string
  +tenHp: string
  +soTinChi: int
}

class Classroom {
  +id: int
  +maLopHp: string
  +hocKy: string
  +namHoc: string
  +phongHoc: string
  +lichHoc: string
  +siSoToiDa: int
  +trangThai: TrangThaiLopHP
}

class Enrollment {
  +id: int
  +hocKy: string
  +namHoc: string
  +trangThai: TrangThaiDangKy
}

class Grade {
  +id: int
  +diemChuyenCan: decimal
  +diemQuaTrinh: decimal
  +diemThi: decimal
  +diemTongKet10: decimal
  +diemHe4: decimal
  +diemChu: string
  +lanHoc: int
}

class Attendance {
  +id: int
  +ngayHoc: date
  +trangThai: TrangThaiDiemDanh
  +ghiChu: string
}

class GPASemester {
  +id: int
  +hocKy: string
  +namHoc: string
  +gpaHe4: decimal
  +tongTinChiTichLuy: int
}

class AcademicStanding {
  +id: int
  +gpaTichLuy: decimal
  +xepLoai: string
}

class ClassificationRule {
  +id: int
  +diemTu: decimal
  +diemDen: decimal
  +nhanXepLoai: string
  +kichHoat: bool
}

class AuditLog {
  +id: int
  +hanhDong: string
  +doiTuong: string
  +truocThayDoi: json
  +sauThayDoi: json
  +taoLuc: datetime
}

class EnrollmentService {
  +adminDangKyHocPhan(): Enrollment
  +sinhVienDangKyHocPhan(): Enrollment
}

class GradeService {
  +nhapSuaDiem(enrollmentId, lanHoc, scores): Grade
}

class AttendanceService {
  +diemDanhLop(classroomId, ngayHoc, rows): list
}

class GPAService {
  +recalculate(studentId): AcademicStanding
}

User "1" -- "1" UserProfile
UserProfile "0..1" -- "1" Student : account_of
User "1" -- "0..*" Classroom : teaches
User "1" -- "0..*" AuditLog : actor

Course "1" -- "0..*" Classroom
Student "1" -- "0..*" Enrollment
Classroom "1" -- "0..*" Enrollment
Enrollment "1" -- "0..*" Grade
Classroom "1" -- "0..*" Attendance
Enrollment "1" -- "0..*" Attendance
Student "1" -- "0..*" GPASemester
Student "1" -- "0..1" AcademicStanding
ClassificationRule "1" -- "0..*" AcademicStanding : classify_by_gpa

EnrollmentService ..> Enrollment
EnrollmentService ..> Classroom
GradeService ..> Grade
GradeService ..> Enrollment
GradeService ..> GPAService
AttendanceService ..> Attendance
AttendanceService ..> Classroom
GPAService ..> GPASemester
GPAService ..> AcademicStanding
GPAService ..> ClassificationRule

@enduml
